--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     box-shadow: 2px 2px 20px #919191;
     text-align: center;
     border-radius: 8px;
-    color: white;
+    color: #341f97;
 }
 
 h2 {
@@ -96,20 +96,20 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 650px;
+    height: 550px;
 }
 .bmi-image-container {
     position: relative;
     width: 600px;
     height: 450px;
-    background-color: #f0f0f0;
+    background-color: #d1c3f0;
     border-radius: 5px;
     overflow: hidden;
 }
 
 .bmi-image {
     width: 100%;
-    height: 100%;
+    height: 200%;
     object-fit: cover;
 }
 
